chore: explicitly ignore v0-indonesia-inequality-dashboard donor folder
Add explicit gitignore rule to prevent accidental commits of the donor
repository content.

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,8 @@ data/processed/*.parquet
 !data/raw/.gitkeep
 !data/processed/.gitkeep
 !data/geo/.gitkeep
+
+# =========================
+# Donor folder (NEVER commit)
+# =========================
+v0-indonesia-inequality-dashboard/
