--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ motor>=3.3.0,<4.0.0
 # Data processing
 pandas>=2.1.0,<3.0.0
 numpy>=1.26.0,<2.0.0
+python-multipart
 
 # Utilities
 python-dotenv>=1.0.0,<2.0.0
