--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-scroll-area": "1.2.2",
     "@radix-ui/react-select": "2.1.4",
     "@radix-ui/react-slider": "1.2.2",
     "@radix-ui/react-slot": "1.1.1",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-query": "^5.90.16",
     "@types/leaflet": "^1.9.21",
@@ -30,7 +32,7 @@
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
     "react-simple-maps": "3.0.0",
-    "recharts": "2.15.4",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "zustand": "5.0.9"
   },
@@ -44,7 +46,7 @@
     "eslint-config-next": "16.1.1",
     "postcss": "^8.5",
     "tailwindcss": "^4",
-    "tw-animate-css": "1.3.3",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5"
   }
 }
