--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,8 @@
     "lucide-react": "^0.454.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^5.0.0",
     "react-simple-maps": "3.0.0",
     "recharts": "2.15.4",
@@ -44,7 +44,7 @@
     "eslint-config-next": "16.1.1",
     "postcss": "^8.5",
     "tailwindcss": "^4",
-    "tw-animate-css": "1.3.3",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5"
   }
 }
